2025-10-17T01:18:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18579414177 # 799
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 1126 1606 / 1139 1619
* notice: next accum: outdated-unq outdated-all / unq all: 1126 1606 / 1140 1620
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-10-16]

2025-10-16T01:18:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18547267168 # 798
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-16
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1125 1605 / 1139 1619
* notice: next accum: outdated-unq outdated-all / unq all: 1126 1606 / 1139 1619
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-02] / []

2025-10-15T01:18:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18514726778 # 797
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-15
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 1124 1604 / 1138 1618
* notice: next accum: outdated-unq outdated-all / unq all: 1125 1605 / 1139 1619
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-01] / [2025-10-15]

2025-10-14T01:16:36Z: