@@ -1,64 +1,14 @@
 {
-  "count": 14,
-  "uniques": 5,
+  "count": 2,
+  "uniques": 2,
   "clones": [
     {
-      "timestamp": "2025-10-04T00:00:00Z",
+      "timestamp": "2025-10-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2025-10-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-08T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2025-10-09T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2025-10-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-16T00:00:00Z",
+      "timestamp": "2025-10-31T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
