@@ -1,3 +1,12 @@
+2025-11-06T01:56:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19122295738 # 800
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 1126 1606 / 1140 1620
+* notice: next accum: outdated-unq outdated-all / unq all: 1140 1620 / 1142 1622
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-10-04 2025-10-05 2025-10-06 2025-10-07 2025-10-08 2025-10-09 2025-10-10 2025-10-11 2025-10-12 2025-10-13 2025-10-15 2025-10-16] / [2025-10-23 2025-10-31]
+
 2025-10-17T01:18:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18579414177 # 799
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
